slight map modifications

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,4 +43,7 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.google.android.gms:play-services-maps:11.2.0'
     compile 'io.proximi.proximiiolibrary:proximiiolibrary:2.6.4'
+    compile 'com.google.maps.android:android-maps-utils:0.5+'
+    compile 'com.google.maps:google-maps-services:0.1.20'
+
 }
