hard coded notifications (drop nodered)

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,9 +29,8 @@
             android:name=".BackgroundListener"
             android:exported="false">
             <intent-filter>
-                <action android:name="io.proximi.proximiiolibrary.action.POSITION" />
-                <action android:name="io.proximi.proximiiolibrary.action.OUTPUT" />
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="io.proximi.proximiiolibrary.action.GEOFENCE_ENTER"/>
+                <action android:name="io.proximi.proximiiolibrary.action.GEOFENCE_EXIT"/>
             </intent-filter>
         </receiver>
 
