--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,5 +45,6 @@ dependencies {
     compile 'io.proximi.proximiiolibrary:proximiiolibrary:2.6.4'
     compile 'com.google.maps.android:android-maps-utils:0.5+'
     compile 'com.google.maps:google-maps-services:0.1.20'
+    compile 'com.android.volley:volley:1.0.0'
 
 }
