homepage linking to mainactivity

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,17 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="lunch"
+                    android:host="main"
+                    android:pathPrefix="/"/>
+            </intent-filter>
         </activity>
 
         <meta-data
@@ -44,9 +55,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".BackgroundListener" />
-        <activity android:name=".DeepLinkHandler">
-
-        </activity>
     </application>
 
 </manifest>
